# markup.rs

./: .gitignore  Cargo.toml  Makefile  README.md  README.md.erb  Rakefile
.github/workflows/: benchmark.yml  build.yml  ci.yml
docs/: reference.md
examples/: Cargo.toml  README.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.css  main.rs
markup/: Cargo.toml
markup-benches/: Cargo.toml
markup-benches/benches/: escape.rs  fortunes.rs  macros.rs  tbr.rs
markup-proc-macro/: Cargo.toml
markup-proc-macro/src/: ast.rs  caching.rs  escape.rs  generate.rs  lib.rs  parse.rs
markup/benches/: dynamic.rs  escape.html  escape.rs  tbr.rs
markup/examples/: attributes.rs  blog.rs  dynamic.rs  fortunes.rs  layout.rs  quick.rs  quick_example.rs  reference.rs  syntax.rs  syntax.txt
markup/src/: escape.rs  lib.rs
markup/tests/: macros.rs  macros.rs.erb  more.rs  tests.rs
markup/tests/snapshots/: tests__e0__t.snap  tests__e10__t.snap  tests__e11__t.snap  tests__e12__t.snap  tests__e13__t.snap  tests__e14__t.snap  tests__e1__t.snap  tests__e2__t.snap  tests__e3__t.snap  tests__e4__t.snap  tests__e5__t.snap  tests__e6__t.snap  tests__e7__t.snap  tests__e8__t.snap  tests__e9__t.snap  tests__t-2.snap  tests__t.snap
ui-tests/: Cargo.toml
ui-tests/fail/: not-render.stderr
ui-tests/fail-1.56/: not-render.stderr
ui-tests/fail-1.63/: not-render.stderr
ui-tests/fail-1.65/: not-render.rs  not-render.stderr
ui-tests/fail-1.72/: not-render.stderr
ui-tests/fail-1.78/: not-render.stderr
ui-tests/src/: lib.rs
