[package]
name = "markup-benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
markup = { path = "../markup", version = "0.14.0" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "fortunes"
harness = false

[[bench]]
name = "tbr"
harness = false
