[package]
name = "markup-proc-macro"
version = "0.13.1"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2021"
description = "A blazing fast, type-safe template engine for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/markup"
homepage = "https://github.com/utkarshkukreti/markup.rs"
repository = "https://github.com/utkarshkukreti/markup.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "2.0.0", features = ["extra-traits", "full"] }
