[package]
name = "markup-proc-macro"
version = "0.14.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2021"
description = "A blazing fast, type-safe template engine for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/markup"
homepage = "https://github.com/utkarshkukreti/markup.rs"
repository = "https://github.com/utkarshkukreti/markup.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits", "full"] }
