[package]
name = "markup"
version = "0.13.1"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2018"
description = "A blazing fast, type-safe template engine for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/markup"
homepage = "https://github.com/utkarshkukreti/markup.rs"
repository = "https://github.com/utkarshkukreti/markup.rs"
readme = "README.md"
keywords = ["template", "html", "markup", "pug", "haml"]
categories = ["template-engine"]

[dependencies]
markup-proc-macro = { path = "../markup-proc-macro", version = "0.13.1" }
itoa = { version = "1.0.1", optional = true }
